--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.5
   sliver_tools: ^0.2.12
+  money_formatter: ^0.0.6
 
 dev_dependencies:
   flutter_test:
