--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   money_formatter: ^0.0.6
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0
+  google_fonts: ^6.2.1
+  buttons_tabbar: ^1.3.8
+  bubble_tab_indicator: ^0.1.6
 
 dev_dependencies:
   flutter_test:
