--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   google_fonts: ^6.2.1
   buttons_tabbar: ^1.3.8
   bubble_tab_indicator: ^0.1.6
+  dropdown_button2: ^2.3.9
+  input_quantity: ^2.3.2
 
 dev_dependencies:
   flutter_test:
