--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   bubble_tab_indicator: ^0.1.6
   dropdown_button2: ^2.3.9
   input_quantity: ^2.3.2
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +71,31 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/
+    - lib/ui/assets/images/
+    - lib/ui/assets/fonts/
 
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: lib/ui/assets/fonts/Poppins-Black.ttf
+        - asset: lib/ui/assets/fonts/Poppins-BlackItalic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-Bold.ttf
+        - asset: lib/ui/assets/fonts/Poppins-BoldItalic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-ExtraBold.ttf
+        - asset: lib/ui/assets/fonts/Poppins-ExtraBoldItalic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-ExtraLight.ttf
+        - asset: lib/ui/assets/fonts/Poppins-ExtraLightItalic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-Italic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-Light.ttf
+        - asset: lib/ui/assets/fonts/Poppins-Medium.ttf
+        - asset: lib/ui/assets/fonts/Poppins-MediumItalic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-Regular.ttf
+        - asset: lib/ui/assets/fonts/Poppins-SemiBold.ttf
+        - asset: lib/ui/assets/fonts/Poppins-SemiBoldItalic.ttf
+        - asset: lib/ui/assets/fonts/Poppins-Thin.ttf
+        - asset: lib/ui/assets/fonts/Poppins-ThinItalic.ttf
+        - style: italic
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
