--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,8 +45,9 @@ android {
         applicationId "com.group2.keeyosk"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        // minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 20
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
