--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   input_quantity: ^2.3.2
   fluttertoast: ^8.2.5
   uuid: ^4.4.0
+  qr_code_scanner: ^1.0.1
+  socket_io_client: ^2.0.3+1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
