--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   socket_io_client: ^2.0.3+1
   http: ^1.2.1
+  flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_test:
