--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <application
         android:label="keeyosk"
         android:name="${applicationName}"
@@ -16,6 +17,7 @@
             </intent-filter>
         </receiver>
         <activity
+        
             android:name=".MainActivity"
             android:usesCleartextTraffic="true" 
             android:exported="true"
