--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   http: ^1.2.1
   flutter_local_notifications: ^17.1.2
   url_launcher: ^6.2.6
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
