--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   url_launcher: ^6.2.6
   auto_size_text: ^3.0.0
+  image_picker: ^1.1.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
