--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   auto_size_text: ^3.0.0
   image_picker: ^1.1.1
   flutter_svg: ^2.0.10+1
+  currency_text_input_formatter: ^2.2.3
 
 dev_dependencies:
   flutter_test:
