--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   image_picker: ^1.1.1
   flutter_svg: ^2.0.10+1
   currency_text_input_formatter: ^2.2.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
